расставляю расстояние меду элементами

--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "customize-cra": "^1.0.0",
+    "node-sass": "^7.0.3",
+    "react-app-rewired": "^2.2.1",
+    "sass": "^1.69.6",
+    "sass-loader": "^13.3.3"
   }
 }
