--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "assets": "^3.0.1",
     "axios": "^1.6.3",
     "classnames": "^2.5.1",
+    "mobx": "^6.12.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
