--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "assets": "^3.0.1",
     "axios": "^1.6.3",
     "classnames": "^2.5.1",
+    "css-loader": "^6.9.1",
     "mobx": "^6.12.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -18,6 +20,8 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "style-loader": "^3.3.4",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
