--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "assets": "^3.0.1",
     "axios": "^1.6.3",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "classnames": "^2.5.1",
     "css-loader": "^6.9.1",
+    "mini-css-extract-plugin": "^2.7.7",
     "mobx": "^6.12.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -25,10 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +53,8 @@
     "node-sass": "^9.0.0",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.69.6",
-    "sass-loader": "^13.3.3"
+    "sass-loader": "^13.3.3",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
   }
 }
