--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "assets": "^3.0.1",
     "axios": "^1.6.3",
     "classnames": "^2.5.1",
-    "mini-css-extract-plugin": "^2.7.7",
+    "css-loader": "^6.9.1",
     "mobx": "^6.12.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -19,12 +20,15 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "style-loader": "^3.3.4",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,21 +49,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@svgr/webpack": "^8.1.0",
-    "babel-loader": "^9.1.3",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "css-loader": "^6.9.1",
     "customize-cra": "^1.0.0",
     "node-sass": "^9.0.0",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.69.6",
-    "sass-loader": "^13.3.3",
-    "style-loader": "^3.3.4",
-    "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "sass-loader": "^13.3.3"
   }
 }
