--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.4",
+    "swagger-client": "^3.25.0",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
