--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "assets": "^3.0.1",
     "axios": "^1.6.3",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "css-loader": "^6.9.1",
     "mobx": "^6.12.0",
     "prop-types": "^15.8.1",
