--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "css-loader": "^6.9.1",
+    "date-fns": "^3.3.1",
+    "date-fns-tz": "^2.0.0",
     "http-proxy-middleware": "^2.0.6",
     "mobx": "^6.12.0",
     "prop-types": "^15.8.1",
